# Proj2025_Car_Window_System

./: .gitignore  BackProgram.desktop  CMakeLists.txt  MqTTPubApp.py  MyApp.desktop  README.md  ReceiveData.py  main.cpp
Arduino/: README.md  Rain_Sensor.ino
GUIApp/: CMakeLists.txt  README.md  main.cpp
GUIApp/assets/: images.qrc
GUIApp/include/Mqtt/: CMainWindow.hpp  CMqttCallback.hpp
GUIApp/main/: CMakeLists.txt  main.cpp
GUIApp/src/: CMainWindow.cpp  CMakeLists.txt  CMqttCallback.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mqttclientwrapper.cpp  mqttclientwrapper.h
MotorController/: MotorContoller.py  README.md
MqTTPubApp/: MqTTPubApp.py  README.md  config.json
secure/: config.json
